content/terraform-enterprise/1.0.x/docs/enterprise/deploy/prepare-host.mdx
---
page_title: Prepare host environment
description: This topic describes how to configure the host environment for running Terraform Enterprise.
---

# Prepare the Terraform Enterprise host environment

This topic describes how to prepare a Linux instance on your cloud provider to host a non-Replicated Terraform Enterprise deployment. For information about deploying to Replicated, refer to [Deploy to Replicated](/terraform/enterprise/deploy/replicated).

## Overview

Complete the following steps to set up your Terraform Enterprise host environment:

1. Determine which runtime is most suitable for your architecture.
1. Provide a DNS hostname for Terraform Enterprise and the associated TLS certificate.
1. Configure your network so that your host can receive and send traffic.

## Requirements

The requirements depend on the runtime platform you intend to use.

### Docker

Terraform Enterprise supports the following versions of Docker Engine. We publish both amd64 and arm64 images:

- 23.0.x
- 24.0.x
- 25.0.x
- 26.0.x
- 26.1.x

### Kubernetes

You can create a host for your Terraform Enterprise Kubernetes cluster on the following cloud service providers:

- Amazon Elastic Kubernetes Service (EKS)
- Google Cloud Google Kubernetes Engine (GKE)
  - GKE Autopilot. Refer to [Increase run capacity](/terraform/enterprise/deploy/kubernetes/scale/run-capacity) for additional information.
- Azure Kubernetes Service (AKS)


You can install Terraform Enterprise using the Helm CLI version 3.0 or later. Refer to the [Helm documentation](https://helm.sh/docs/intro/install/) for instructions on installing Helm.

### Nomad

- Nomad v1.5.0 and newer.

### OpenShift

You can create a host for your Terraform Enterprise OpenShift cluster on the following cloud service providers:

- AWS Elastic Kubernetes Service (EKS)
- Google Cloud Google Kubernetes Engine (GKE)
- Azure Azure Kubernetes Service (AKS)

You can install Terraform Enterprise using the Helm CLI version 3.0 or later. Refer to the [Helm documentation](https://helm.sh/docs/intro/install/) for instructions on installing Helm.

### Podman

- Podman v4.3.0 or later.
- If installing on Red Hat Enterprise Linux (RHEL), RHEL 8 or later is required.

## Install the runtime

Refer to the documentation for your runtime for installation instructions:

- [Install Docker Engine](https://docs.docker.com/engine/install/) for your operating system.
- [Install Kubernetes](https://kubernetes.io/docs/tasks/tools/)
- [Install OpenShift](https://docs.openshift.com/container-platform/latest/installing/overview/index.html)
- [Install Podman](https://podman.io/docs/installation)
- [Install Nomad](/nomad/install)

### Enable the Podman socket

If you are deploying to Podman, set up Podman’s docker-compatible REST API that runs as a `systemd` socket-activated service:

```shell-session
$ systemctl enable --now podman.socket
```

### Set the security context for Podman on RHEL and SELinux

We recommend adding `type: spc_t` to the `kube.yaml` file when using volumes for an unprivileged Podman container on an SELinux-enabled system. This setting ensures the correct permissions are in place to access the volume when Terraform Enterprise creates the pod and container.

Specify the value in the Kubernetes pod specification's security context:

```yaml
"securityContext":
  "seLinuxOptions":
    "type": "spc_t"
```

## Assign a DNS hostname

Terraform Enterprise requires a DNS hostname so that it is accessible to users and services. Refer to the documentation for your cloud provider for instructions.

You can add a secondary hostname so that users can access Terraform Enterprise using an alternative address. For example, you can provide an address for OIDC workload identity federation or to let external users to interact with Terraform Enterprise. 

Refer to [Configure network settings](/terraform/enterprise/deploy/configuration/network) for instructions.  

## Create TLS certificates

Generate the following TLS certificates:

- `cert.pem`: The end-entity certificate for your DNS hostname with any intermediate certificates appended to it.
- `key.pem`: The private key for the end-entity certificate. Must not be protected by a passphrase.
- `bundle.pem`: Additional certificates to be added to the Certificate Authority (CA) bundle.

If your certificate files are from Let’s Encrypt, the file names map to the following Terraform Enterprise files:

| Terraform Enterprise | Let's Encrypt |
| ---   | ---   |
| key.pem | privkey.pem |
| cert.pem | fullchain.pem |
| bundle.pem | fullchain.pem |

If you do not have a certificate, you can generate a self-signed certificate. 

The following example uses the `openssl` command to generate an RSA key and certificate for an organization with name `MyOrganization`.  The `-nodes` option is required because Terraform Enterprise cannot use a private key that is protected by a passphrase. Specify details about your organization in the `-subj` flag. Refer to the [OpenSSL documentation](https://docs.openssl.org/master/man1/openssl-req/) for information about forming the command. 

Setting the following environment variables keeps the self-signed certificate generation a one-line command.

|Variable | Description |
| --- |--- |
|`CERT_CN`| Common Name, such as the server FQDN or your name. Set to your Terraform Enterprise FQDN. |
|`CERT_COUNTRY`| Country Name. This is a two-letter code, for example `AU`. |
|`CERT_STATE`|State or Province Name. Specify the full name, for example `California` |
|`CERT_LOCALITY`| Locality Name, such as the name of your city. |
|`CERT_ORGNAME`| Organization Name, such as your company name. For example `HashiCorp`. |
|`CERT_ORGUNIT`| Organizational Unit Name, such as your department. ||

First, export the details of `MyOrganization` as environment variables. Replace the example values as required.

```shell-session
export CERT_CN="tfe.example.com"
export CERT_COUNTRY="US"
export CERT_STATE="California"
export CERT_LOCALITY="San Francisco"
export CERT_ORGNAME="MyOrganization"
export CERT_ORGUNIT="Engineering"
```

Then, generate the self-signed certificate.

```shell-session
openssl req -nodes -x509 -sha256 -newkey rsa:4096 \
 -keyout cert.key \
 -out cert.crt \
 -days 356 \
 -subj "/C=${CERT_COUNTRY}/ST=${CERT_STATE}/L=${CERT_LOCALITY}/O=${CERT_ORGNAME}/OU=${CERT_ORGUNIT}/CN=${CERT_CN}" \
 -addext "subjectAltName=DNS:${CERT_CN}"
```

Copy the `cert.pem` file to a new file named `bundle.pem`:

```shell-session
$ cp cert.pem bundle.pem
```

## Configure network access
You must configure the host to allow traffic to and from the Linux instance that Terraform Enterprise runs in. Refer to [Configure network access](/terraform/enterprise/deploy/configuration/network) for instructions. 
